#Task27 Feat/ Update footer-responsive  (#56)
* Feat :update Marketing card class

* Feat : Update responsive marketing

* Fix : Change article into products-section

* Fix : Fix card-text into card-title

* Fix : Fix css card-tex into card-title

* Feat : Update class bootstrap into CTA-section

* Feate : picture resolution

* Fix : Fix @media breakpoint

* Fix : Edit format @media

* Feat : Update header-navbar responsvie

* Feat : Update header-carousel responsive

* Feat : Update header-tab responsive

* Feat : Update global container responsive

* Feat : Update font-css responsive

* REFACTOR : Format @media doc inde.css

* REFACTOR : Format @media doc inde.css

* Fix : Fix .container padding(top-botton)

* Feat : Update service responsive

* Feat : update products responsive

* Feat : Update marketing responsive

* Fix : fix comment

* Fix : fix comment

* Feat : Mr code from branch produtc and fix/media

* Feat : update cta responsive

* Feat : update footer-responsive

* Feate : Update responsvie footer-rule

* Feate : Update footer-about

* style : margin padding

* feate : Update footer-about

* Feate : update footer-about

* Feate : update cta responsve

* Feat : Update cta-responsive

* Perf : Update uit

* Perf : Update uit

* Perf : Update uit

* first commit

* Fix : commnet

* Fix : commnet

* Fix : commnet

* Fix : Fix padding margin footer-about

* Perf : Update uit

* Perf : Delete dup class

* Fix : Fix comment

* Fix : Fix comment

* Fix : Fix comment naming class

* Fix : fix comment naming class

* Fix : fix comment naming class

* Fix : fix btn--flex name

* Fix : Hr line

* Fix : Hr line

* Fix : class media footer

* Fix : btn--chervon

* Fix : Fix duplicate class

* Fix : Fix duplicate class

* Fix : Fix duplicate class

* Fix : Fix duplicate class cta

--- a/practice-02/styles/font.css
+++ b/practice-02/styles/font.css
@@ -1,31 +1,27 @@
-.font--small {
-  font-size: var(--font-size-small);
-  font-weight: var(--font-weight-medium);
-  line-height: var(--line-height-small);
-}
 .nav-text {
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-base);
   line-height: var(--line-height-small);
 }
 
-.heading-lg {
-  font-size: var(--font-size-x-large);
-  line-height: var(--line-height-x-large);
-  font-weight: var(--font-weight-bold);
-}
-
-.heading-sm {
+.text-sm {
   font-size: var(--font-size-small);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-small);
 }
 
-.heading-md {
+.text-md {
   font-size: var(--font-size-medium);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-medium);
 }
+
+.text-lg {
+  font-size: var(--font-size-x-large);
+  line-height: var(--line-height-x-large);
+  font-weight: var(--font-weight-bold);
+}
+
 
 /* Card */
 
@@ -64,7 +60,7 @@
 \*------------------------------------*/
 /* mobile */
 @media screen and (min-width: 480px) {
-  .heading-lg {
+  .text-lg {
     font-size: var(--font-size-xx-large);
     line-height: var(--line-height-xx-large);
   }
@@ -74,7 +70,7 @@
 @media screen and (min-width: 768px) {
 
   /* < 768px */
-  .heading-lg {
+  .text-lg {
     font-size: var(--font-size-xxx-large);
     line-height: var(--line-height-xxx-large);
   }
