--- a/practice-02/styles/index.css
+++ b/practice-02/styles/index.css
@@ -243,7 +243,7 @@ a {
   width: 100%;
 }
 
-.header-carousel .heading-lg {
+.header-carousel .text-lg {
   letter-spacing: -0.888889px;
 }
 
@@ -462,7 +462,7 @@ a {
   padding: 4.5rem 0;
   padding-bottom: 0;
 }
-.cta-content .card-text .heading-lg {
+.cta-content .card-text .text-lg {
   margin-bottom: 1rem;
 }
 
@@ -487,7 +487,7 @@ a {
 
 .cta .card-footer {
   background-image: url(../img/BG.png);
-  background-position: 62.5rem;
+  background-position: -62.5rem;
   background-repeat: no-repeat;
   /* background-position-x: right; */
   background-position-y: -1rem;
@@ -499,7 +499,7 @@ a {
 /* Cta__card-footer */
 /* button */
 .cta-content .card-footer .btn {
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
 }
 
 
@@ -509,7 +509,7 @@ a {
   color: var(--black);
 }
 
-.btn--chevron {
+.cta .btn-primary {
   border-radius: none;
   width: 198px;
   height: 64px;
@@ -517,10 +517,11 @@ a {
   filter: drop-shadow(0px 1.5rem 2rem rgba(0, 0, 0, 0.1));
 }
 
-.btn--chevron:hover {
+.cta .btn-primary:hover {
   background-color: var(--crab-nebula);
   color: var(--white);
   border: none;
+  opacity: 1;
 }
 
 /* span */
@@ -536,99 +537,85 @@ a {
   position: relative;
 }
 
-/* footer__content */
-.footer__content {
+.footer .card .media{
+  flex-direction: row;
+ }
+
+.footer .menu-list {
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  margin-top: 7.5rem;
-  margin-bottom: 7.5rem;
-}
-
-.footer__content .item {
-  color: var(--black);
-}
-
-.content-left {
-  width: 30%;
-}
-
-.footer__content-left .font--small {
-  color: var(--bauhaus);
-  line-height: var(--line-height-medium);
-
-  margin-top: 1.5rem;
-}
-
-.media-icon {
-  margin-right: 1rem;
-  padding-top: 1.625rem;
-}
-
-/* footer__content-right */
-.footer__content-right {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer__menu .menu__list {
   flex-direction: column;
 }
-
-.footer__menu .nav-mark {
+.footer .menu-list>.item{
+  padding-bottom: 1.25rem;
   font-weight: var(--font-weight-bold);
 }
+.footer .list-item {
+  padding-bottom: 15px;
+}
+/* footer__content */
+.footer-content {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  /* align-items: stretch; */
+  margin-top: 4.5rem;
+  margin-bottom: 3rem;
 
-.footer__menu .list__item {
-  padding-bottom: 1.25rem;
+  display: grid;
+  row-gap: 2rem;
 }
 
+.footer-content .text-sm {
+  color: var(--bauhaus);
+  line-height: var(--line-height-medium);
+}
+
+.footer-content .media {
+  margin-bottom: 1rem;
+}
+.footer-content .card-body {
+  flex: unset;
+}
+.media.menu-list .item{
+  margin-right: 1rem;
+}
+
+
 /* <hr> line */
-.footer__line {
-  width: 94%;
+.divider{
+  margin: 0 2rem;
   height: 1px;
   background: var(--lucky-grey);
-  mix-blend-mode: normal;
   opacity: 0.24;
 }
 
-/* footer__fuel */
-.footer__rule {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-
-  padding: 2.5rem 0px;
-}
-
-.rule__copyright {
+.footer-rule .menu-list>.item {
   color: var(--bauhaus);
   letter-spacing: 0.2px;
+  padding: 0;
+  margin-bottom: 2rem;
 }
 
-.footer__rule-right {
+.footer-rule {
+  padding-top: 2rem;
+}
+
+.footer-rule .item{
+  margin-bottom: 2rem;
+}
+
+.dropdown {
   width: 70%;
+  margin-bottom: 2rem;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-top: 1.875rem;
+}
+.dropdown .btn {
+  padding: 0;
+  width: auto;
 }
 
-.rule__menu {
-  justify-content: space-around;
-}
-
-.rule__menu .item {
-  padding-right: 3rem;
-}
-
-.rule__locale {
-  display: flex;
-  align-items: center;
-}
-
-.btn--flex {
+.dropdown-toggle {
   border: none;
   font-weight: var(--font-weight-medium);
   font-size: var(--font-size-medium);
@@ -693,14 +680,34 @@ a {
     .card-body {
       margin-bottom: 1.5rem;
     }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(2,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
+  }
+
+  .footer-rule {
+    padding-top: 0;
+  }
+  .footer-rule .nav-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-items: start;
+    align-items: end;
+    padding-bottom: 0;
+  }
+  .footer-rule .dropdown {
+    grid-area: 1/2;
+  }
 }
 
 /*Vertical iPad(768 x 1024)*/
 @media screen and (min-width: 768px) {
-  .container {
-    padding: 2rem 2.5rem 0 2.5rem;
-  }
-
   .service-left .card-text {
     font-size: var(--font-size-large);
     line-height: var(--line-height-xx-large);
@@ -711,9 +718,6 @@ a {
   /* CTA */
   .cta-content {
     padding-top: 5rem;
-  }
-
-  .cta .cta-content {
     padding-left: 0;
     padding-right: 0;
   }
@@ -814,6 +818,7 @@ a {
     flex-direction: row;
     align-items: flex-end;
   }
+
   .card-horizontal {
     margin-top: 2rem;
   }
@@ -826,9 +831,20 @@ a {
   .marketing-content .card.card-img{
     grid-row: 1/4;
   }
-  /***********************/
-  /* cta*/
 
+  /************************/
+  /* cta */
+  .cta .container {
+    margin-bottom: 7.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  .cta .cta-content {
+    align-items: center;
+  }
+  .cta .card-body {
+    margin:0;
+  }
   .cta-content {
     flex-direction: row;
     background-image: url(../img/BG.png);
@@ -840,6 +856,40 @@ a {
     background-image: none;
     width: 60%;
   }
+
+  /******************/
+  /* footer */
+  .footer-content {
+    grid-template-columns: repeat(6,1fr);
+  }
+  .footer-content .card{
+    grid-column: 1/3;
+  }
+
+  .footer-rule .nav-menu {
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: unset;
+    padding-bottom: 0;
+  }
+
+  .footer-rule .menu-list {
+    flex-direction: row;
+    margin-bottom: 2rem;
+  }
+  .footer-rule .menu-list .item{
+    margin-right: 2rem;
+  }
+
+
+  .footer-rule .list-item {
+    padding-bottom: 0;
+  }
+
+  .footer-rule .dropdown {
+    grid-area: 1/3;
+    justify-content: flex-end;
+  }
+
 }
 
 /*Tablet(1024 x 768)*/
@@ -865,19 +915,8 @@ a {
   .marketing .container {
     margin-bottom: 7.5rem;
   }
-  /************************/
-  /* cta */
-  .cta .container {
-    margin-bottom: 7.5rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-  .cta .cta-content {
-    align-items: center;
-  }
-  .cta .card-body {
-    margin:0;
-  }
+
+
 }
 
 @media screen and (min-width: 1240px) {
