--- a/practice-03/styles/main.css
+++ b/practice-03/styles/main.css
@@ -10,6 +10,7 @@
 /* components */
 @import './components/button.css';
 @import './components/card.css';
+@import './components/accordion.css';
 
 @import 'pages/home';
 @import 'pages/contact';
