--- a/practice-03/styles/main.css
+++ b/practice-03/styles/main.css
@@ -1,13 +1,12 @@
 /* abstracts */
-@import './abstracts/variable.css';
+@import "./abstracts/variable.css";
 
 /* base */
-@import './base/reset.css';
-@import './base/typography.css';
+@import "./base/reset.css";
+@import "./base/typography.css";
 
 /* layout */
-@import './layout/header.css';
+@import "./layout/header.css";
 
 /* components */
-@import './components/button.css';
-
+@import "./components/button.css";
