--- a/practice-03/styles/base/reset.css
+++ b/practice-03/styles/base/reset.css
@@ -111,7 +111,7 @@ body {
   line-height: 1;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -129,7 +129,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 
