--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -6,7 +6,7 @@
 }
 
 .btn.btn-primary {
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid var(--bs-white);
   border-radius: 4px;
   color: var(--black);
@@ -18,7 +18,8 @@
 }
 
 /* bg */
-.header, .plan {
+.header,
+.plan {
   background-color: var(--lighthouse);
 }
 .question {
