--- a/practice-03/styles/base/typography.css
+++ b/practice-03/styles/base/typography.css
@@ -7,7 +7,7 @@ body {
 html {
   font-size: 16px;
 }
-
+/* typography heading 1 <h1> */
 .display-1 {
   font-size: var(--font-size-x-large);
   line-height: var(--line-height-x-large);
