--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -1,18 +1,35 @@
-.navbar-toggler {
-  border: none;
-}
+/*------------------------------------*\
+  #Buttons
+\*------------------------------------*/
 .btn {
-  font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
 }
 
-.btn.btn-primary {
-  background: var(--bs-white);
-  border: 1px solid var(--bs-white);
-  border-radius: 4px;
-  color: var(--black);
+.btn-primary {
+    background: var(--bs-white);
+    border: 1px solid var(--bs-white);
+    border-radius: 4px;
+    color: var(--black);
 }
 
-.btn.btn-secondary {
-  background: var(--crab-nebula);
-  border-radius: 4px;
+.btn-primary:hover {
+    color: var(--bs-black);
+    background-color: transparent;
+    border: 1px solid var(--crab-nebula);
+}
+
+.btn-secondary {
+    background: var(--crab-nebula);
+    border-radius: 4px;
+}
+
+
+
+
+/* -----Responsive------ */
+/* tablet */
+@media screen and (min-width: 992px) {
+    .header .btn {
+        width: max-content;
+    }
 }
