--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -1,35 +1,18 @@
-/*------------------------------------*\
-  #Buttons
-\*------------------------------------*/
+.navbar-toggler {
+  border: none;
+}
 .btn {
-    font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bold);
 }
 
-.btn-primary {
-    background: var(--bs-white);
-    border: 1px solid var(--bs-white);
-    border-radius: 4px;
-    color: var(--black);
+.btn.btn-primary {
+  background: var(--bs-white);
+  border: 1px solid var(--bs-white);
+  border-radius: 4px;
+  color: var(--black);
 }
 
-.btn-primary:hover {
-    color: var(--bs-black);
-    background-color: transparent;
-    border: 1px solid var(--crab-nebula);
-}
-
-.btn-secondary {
-    background: var(--crab-nebula);
-    border-radius: 4px;
-}
-
-
-
-
-/* -----Responsive------ */
-/* tablet */
-@media screen and (min-width: 992px) {
-    .header .btn {
-        width: max-content;
-    }
+.btn.btn-secondary {
+  background: var(--crab-nebula);
+  border-radius: 4px;
 }
