--- a/practice-03/styles/base/typography.css
+++ b/practice-03/styles/base/typography.css
@@ -1,12 +1,7 @@
-html,
-body {
-  font-family: var(--font-family);
-  font-style: normal;
-}
+/*------------------------------------*\
+  Typography
+\*------------------------------------*/
 
-html {
-  font-size: 16px;
-}
 /* typography heading 1 <h1> */
 .display-1 {
   font-size: var(--font-size-x-large);
