--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-  #Buttons
+  .Buttons
 \*------------------------------------*/
 .btn {
   font-weight: var(--font-weight-bold);
