--- a/practice-03/styles/main.css
+++ b/practice-03/styles/main.css
@@ -4,6 +4,7 @@
 /* base */
 @import "./base/reset.css";
 @import "./base/typography.css";
+@import "./base/unit.css";
 
 /* layout */
 @import "./layout/header.css";
