--- a/practice-03/styles/index.css
+++ b/practice-03/styles/index.css
@@ -8,6 +8,7 @@
 
 /* layout */
 @import "./layout/header.css";
+@import "./layout/main.css";
 
 /* components */
 @import "./components/button.css";
