--- a/practice-03/styles/layout/main.css
+++ b/practice-03/styles/layout/main.css
@@ -1,8 +1,15 @@
 .main-introduce,
-.plan {
+.package {
     background-color: var(--lighthouse);
 }
+/* container */
+.main .container {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
 
 /*------------------------------------*\
   #main introduce-section
 \*------------------------------------*/
+
