Feat : Update package-help

--- a/practice-03/styles/layout/main.css
+++ b/practice-03/styles/layout/main.css
@@ -10,6 +10,16 @@
 
 
 /*------------------------------------*\
-  #main introduce-section
+  #main
 \*------------------------------------*/
 
+
+/* -----Responsive------ */
+/* tablet */
+@media screen and (min-width: 992px) {
+    /* package-help */
+    .package-help .btn-primary,
+    .package-help .btn-secondary {
+        width: auto;
+    }
+}
