--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -8,14 +8,6 @@
 .card-body,
 .card-footer {
   padding: 0;
-}
-.card-header {
-  background-color: var(--white);
-  border-bottom: none;
-}
-
-.card-footer {
   background: none;
-  border-top: none;
-  padding-top: 0;
+  border: none;
 }
