Feat : Update package-help

--- a/practice-03/styles/layout/main.css
+++ b/practice-03/styles/layout/main.css
@@ -1,3 +1,6 @@
+/*------------------------------------*\
+  #main
+\*------------------------------------*/
 .main-introduce,
 .package {
     background-color: var(--lighthouse);
@@ -9,9 +12,12 @@
   }
 
 
-/*------------------------------------*\
-  #main
-\*------------------------------------*/
+/******package*******/
+/* -help */
+.package-help .btn {
+    width: 100%;
+}
+
 
 
 /* -----Responsive------ */
