--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -11,3 +11,17 @@
   background: none;
   border: none;
 }
+
+
+/* card .button */
+.card .btn {
+  border: 1px solid #dcdcdc;
+  border-radius: 8px;
+
+  padding: 1rem 0;
+}
+.card .btn:hover {
+  background-color: var(--alienated);
+  color: var(--bs-white);
+  border: none;
+}
