--- a/practice-03/styles/layout/main.css
+++ b/practice-03/styles/layout/main.css
@@ -19,13 +19,24 @@
 }
 
 
+/******question*******/
+
+
+
 
 /* -----Responsive------ */
 /* tablet */
 @media screen and (min-width: 992px) {
-    /* package-help */
+    /* package*/
     .package-help .btn{
         width: max-content;
-
+    }
+    /* question */
+    .question .display-2 {
+        width: 40%;
+    }
+    .question-article .accordion {
+        width: 70%;
+        align-items: end;
     }
 }
