--- a/practice-03/styles/index.css
+++ b/practice-03/styles/index.css
@@ -9,6 +9,7 @@
 /* layout */
 @import "./layout/header.css";
 @import "./layout/main.css";
+@import "./layout/footer.css";
 
 /* components */
 @import "./components/button.css";
