--- a/practice-03/styles/layout/footer.css
+++ b/practice-03/styles/layout/footer.css
@@ -13,7 +13,7 @@
     transform: translateY(5px);
     color: var(--black);
 }
-.cta .cta-button{
+.cta .cta-button {
     flex-direction: column;
     background-image: url(../../img/BG.png);
     background-position: -62.5rem;
@@ -41,39 +41,58 @@
     text-decoration: underline var(--crab-nebula);
 }
 
-
-
 /* ------------------------------------*\
   @media queries
 \*------------------------------------*/
-/* CTA-button background-responsive */
+/* CTA-button */
 @media screen and (min-width: 400px) {
     .cta .cta-button {
-      background-position: -56.25rem;
-      background-position-y: -1rem;
+        background-position: -56.25rem;
+        background-position-y: -1rem;
     }
-  }
+}
 
-  @media screen and (min-width: 550px) {
+@media screen and (min-width: 550px) {
     .cta .cta-button {
-      background-size: 125rem;
-      background-position: -82rem;
-      background-position-y: -2rem;
+        background-size: 125rem;
+        background-position: -82rem;
+        background-position-y: -2rem;
     }
-  }
+}
 
-  @media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) {
     .cta .cta-button {
-      background-size: 155rem;
-      background-position: -100rem;
-      background-position-y: -4rem;
+        background-size: 155rem;
+        background-position: -100rem;
+        background-position-y: -4rem;
     }
-  }
+}
 
-  @media screen and (min-width: 900px) {
+@media screen and (min-width: 900px) {
     .cta .cta-button {
-      background-size: 185rem;
-      background-position: -120rem;
-      background-position-y: -6rem;
+        background-size: 185rem;
+        background-position: -120rem;
+        background-position-y: -6rem;
     }
-  }
+}
+
+/* background-responsive */
+@media screen and (min-width: 992px) {
+    .cta {
+        background-image: url(../../img/BG.png);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-position: center;
+    /* padding: 7.5rem 0; */
+    height: 468px;
+
+    }
+    .cta .cta-button{
+        background-image: none;
+        width: 20%;
+    }
+    .cta .cta-content{
+        background-color: unset;
+        width: 80%;
+    }
+}
