--- a/practice-03/styles/index.css
+++ b/practice-03/styles/index.css
@@ -12,4 +12,5 @@
 
 /* components */
 @import "./components/button.css";
-@import "./components/card.css"
+@import "./components/card.css";
+@import "./components/accordion.css";
