REFACTOR: Refactor format accordion

--- a/practice-03/styles/components/accordion.css
+++ b/practice-03/styles/components/accordion.css
@@ -1,3 +1,8 @@
+/*------------------------------------*\
+  .accordion
+\*------------------------------------*/
+
+/* Custom style accordion */
 .question .accordion-button:not(.collapsed) {
   color: unset;
   background-color: unset;
