Fix : Fix comment

--- a/practice-03/styles/layout/footer.css
+++ b/practice-03/styles/layout/footer.css
@@ -6,8 +6,10 @@
 }
 
 /********CTA********/
-.cta .row>* {
+.cta .row>*,
+.container-lg {
   padding-right: unset;
+  padding-left: unset;
 }
 
 /* background */
