--- a/practice-03/styles/components/button.css
+++ b/practice-03/styles/components/button.css
@@ -22,3 +22,20 @@
   background: var(--crab-nebula);
   border-radius: 4px;
 }
+
+
+/* CTA */
+
+.cta-button .btn-primary:hover {
+  background: var(--bs-white);
+}
+
+.cta-button .btn-primary:active {
+  transform: translateY(5px);
+  background-color: var(--crab-nebula);
+  border: none;
+}
+
+.cta-button .text-white:hover {
+  text-decoration: underline var(--crab-nebula);
+}
