#Task32 Feat : Update footer/navigation  (#73)
* Feat : update navigation

* REFACTOR: Refactor format accordion

* Style : Sytle text color fs-.

--- a/practice-03/styles/layout/footer.css
+++ b/practice-03/styles/layout/footer.css
@@ -37,6 +37,17 @@
 }
 
 
+/********navigation********/
+.navigation .fs-5:hover{
+  color: var(--crab-nebula);
+}
+.navigation .fs-6:hover{
+  color: var(--alienated);
+}
+.navigation .fs-5 {
+  font-weight: var(--font-weight-bold);
+}
+
 /* ------------------------------------*\
   @media queries
 \*------------------------------------*/
