Feature/html check (#75)
* Style : update spacing

* Style : update div in ul

* Style : update div in ul

* Style : update div in ul

* Style : update div in ul

--- a/practice-03/styles/base/typography.css
+++ b/practice-03/styles/base/typography.css
@@ -51,6 +51,9 @@
         font-size: var(--font-size-xxx-large);
         line-height: var(--line-height-xxx-large);
     }
+    .display-4 {
+      font-size: var(--font-size-large);
+    }
     /* paragraphs */
     .fs-6 {
         font-size: var(--font-size-base);
