Update main practice-02

--- a/practice-03/styles/components/card.css
+++ b/practice-03/styles/components/card.css
@@ -25,3 +25,59 @@
   color: var(--bs-white);
   border: none;
 }
+
+/* menu__list */
+.card {
+  cursor: pointer;
+  border: none;
+  border-radius: unset;
+}
+
+
+.card:hover .card-header {
+  color: var(--crab-nebula);
+}
+
+.card:active .card-body .card-text {
+  color: var(--alienated);
+}
+
+.card-body:hover .card-text {
+  color: var(--crab-nebula);
+}
+
+/* card-img */
+.card-img .card-header::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+
+  position: absolute;
+  background-color: var(--west_chester-grey);
+}
+
+.card-img,
+.card-header,
+.card-body {
+  margin-bottom: 1rem;
+}
+
+.card-img .card-header {
+  padding-bottom: 0.875rem;
+}
+
+.card-img-top {
+  max-inline-size: 100%;
+  block-size: auto;
+  inline-size: 100%;
+
+  margin-bottom: 1rem;
+
+  border-radius: unset;
+  /* padding: -1.875rem; background padding */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
