--- a/practice-03/styles/pages/blogs.css
+++ b/practice-03/styles/pages/blogs.css
@@ -1,4 +1,68 @@
 /* menu__list */
+.card {
+  cursor: pointer;
+  border: none;
+  border-radius: unset;
+  padding: 0;
+}
+
+.card-header,
+.card-body,
+.card-footer {
+  background: unset;
+  border: unset;
+  padding: unset;
+  position: relative;
+}
+
+.card:hover .card-header {
+  color: var(--black);
+}
+
+.card:active .card-body .card-text {
+  color: var(--alienated);
+}
+
+.card-body:hover .card-text {
+  color: var(--crab-nebula);
+}
+
+/* card-img */
+.card-img .card-header::after {
+  content: "";
+  height: 1px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+
+  position: absolute;
+  background-color: var(--west_chester-grey);
+}
+
+.card-img,
+.card-header,
+.card-body {
+  margin-bottom: 1rem;
+}
+
+.card-img .card-header {
+  padding-bottom: 0.875rem;
+}
+
+.card-img-top {
+  max-inline-size: 100%;
+  block-size: auto;
+  inline-size: 100%;
+
+  margin-bottom: 1rem;
+
+  border-radius: unset;
+  /* padding: -1.875rem; background padding */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 /*------------------------------------*\
   #
 \*------------------------------------*/
@@ -148,7 +212,7 @@
 
 .service-left .card:hover {
   border: 3px solid transparent;
-  border-radius: 8px;
+
   background-color: var(--white);
   box-shadow: 1px 0 3.125rem rgb(0 0 0 / 10%);
 }
